<resources>
    <string name="app_name">AppMovie</string>

    <!-- Categorias -->
    <string name="acao">Ação</string>
    <string name="animacao">Animação</string>
    <string name="guerra">Guerra</string>
    <string name="classicos">Clássicos</string>

    <!-- V -->
    <string name="vazio" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sinopse">Sinopse</string>
    <string name="trailer">Trailer</string>
    <string name="informacao">Informações</string>
</resources>
